log
Wed 08 May 2024 06:53:13 PM UTC: 
 tests:  1|8
total_score: 0/70
41087f4
Wed 08 May 2024 06:54:59 PM UTC: 
 treemap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c:48:5: error: expected identifier or ‘(’ before ‘return’
   48 |     return NULL;
      |     ^~~~~~
treemap.c:49:1: error: expected identifier or ‘(’ before ‘}’ token
   49 | }
      | ^
Compilation failed
4bf1ab6
Wed 08 May 2024 06:55:05 PM UTC: 
 treemap.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  4|7
total_score: 5/70
cd9b23a
Wed 08 May 2024 06:59:28 PM UTC: 
 treemap.c | 22 ++++++++++++++++++++--
 1 file changed, 20 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
8371c4a
Wed 08 May 2024 07:02:23 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
6f6b600
Wed 08 May 2024 07:06:15 PM UTC: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
e54b2eb
Wed 08 May 2024 07:06:28 PM UTC: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
3b9ee03
Wed 08 May 2024 07:12:19 PM UTC: 
 treemap.c | 19 +++++++++++++++++--
 1 file changed, 17 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:113:16: error: implicit declaration of function ‘getMinimunNode’ [-Werror=implicit-function-declaration]
  113 |         return getMinimunNode(tree->current->right);
      |                ^~~~~~~~~~~~~~
treemap.c:113:16: error: returning ‘int’ from a function with return type ‘Pair *’ makes pointer from integer without a cast [-Werror=int-conversion]
  113 |         return getMinimunNode(tree->current->right);
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
1bb3cc3
Wed 08 May 2024 07:17:11 PM UTC: 
 treemap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:123:16: error: returning ‘TreeNode *’ from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
  123 |         return getMinimunNode(tree->current->right); // Aquí, getMinimumNode es una función auxiliar que retorna el nodo con la clave mínima en un subárbol dado. Esta función es necesaria para encontrar el sucesor en el caso 1.
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0521d46
Wed 08 May 2024 07:22:44 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  14|6
total_score: 20/70
c7bb85c
Wed 08 May 2024 07:32:50 PM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  14|6
total_score: 20/70
b0059fb
Wed 08 May 2024 07:37:43 PM UTC: 
 treemap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  13|6
total_score: 20/70
24995ee
Wed 08 May 2024 07:39:33 PM UTC: 
 treemap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  13|6
total_score: 20/70
332a7e4
Wed 08 May 2024 07:44:39 PM UTC: 
 treemap.c | 30 +++++++++++++++++++++---------
 1 file changed, 21 insertions(+), 9 deletions(-)
 tests:  0|0
63fb876
Wed 08 May 2024 07:46:19 PM UTC: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:154:9: error: ‘succesor’ undeclared (first use in this function); did you mean ‘successor’?
  154 |     if (succesor != NULL){
      |         ^~~~~~~~
      |         successor
treemap.c:154:9: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
1adbe3d
Wed 08 May 2024 07:46:47 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  16|5
total_score: 30/70
b1ff76b
Wed 08 May 2024 07:54:37 PM UTC: 
 treemap.c | 45 ++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 44 insertions(+), 1 deletion(-)
 tests:  16|5
total_score: 30/70
83432ea
Wed 08 May 2024 07:59:49 PM UTC: 
 treemap.c | 40 +++++++++++++++++++---------------------
 1 file changed, 19 insertions(+), 21 deletions(-)
 tests:  18|4
total_score: 40/70
08dbc4e
Wed 08 May 2024 08:02:48 PM UTC: 
 treemap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  18|4
total_score: 40/70
30f6d7d
Wed 08 May 2024 08:03:09 PM UTC: 
 treemap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  18|4
total_score: 40/70
c6a5fd2
Wed 08 May 2024 08:05:28 PM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  18|4
total_score: 40/70
dd9dc9e
Sat 11 May 2024 05:39:45 PM UTC: 
 treemap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  20|3
total_score: 40/70
252be4b
Sat 11 May 2024 05:48:05 PM UTC: 
 treemap.c | 25 ++++++++++++++++++++++++-
 1 file changed, 24 insertions(+), 1 deletion(-)
 tests:  21|3
total_score: 45/70
9f574ad
Sat 11 May 2024 05:54:05 PM UTC: 
 treemap.c | 28 ++++++++++++++++++++++++++++
 1 file changed, 28 insertions(+)
 tests:  23|2
total_score: 55/70
b2ebdbc
Sat 11 May 2024 06:03:55 PM UTC: 
 treemap.c | 13 ++++++++++---
 1 file changed, 10 insertions(+), 3 deletions(-)
 tests:  23|2
total_score: 55/70
c58c136
Sat 11 May 2024 06:06:56 PM UTC: 
 treemap.c | 15 +++++++++++++--
 1 file changed, 13 insertions(+), 2 deletions(-)
 tests:  25|1
total_score: 60/70
3c7f677
Sat 11 May 2024 06:10:08 PM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  25|1
total_score: 60/70
ecadf72
Sat 11 May 2024 06:18:00 PM UTC: 
 treemap.c | 34 +++++++++++++++++++++++++++++++---
 1 file changed, 31 insertions(+), 3 deletions(-)
 tests:  25|1
total_score: 60/70
3158117
Sat 11 May 2024 06:18:56 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘upperBound’:
treemap.c:213:49: error: expected ‘)’ before ‘{’ token
  213 |         if (is_equal(key, tree, temp->pair->key)
      |            ~                                    ^
      |                                                 )
  214 |         {
      |         ~                                        
treemap.c:227:5: error: expected expression before ‘}’ token
  227 |     }
      |     ^
Compilation failed
50920b4
